syntax = "proto3";

package water_reminder.water_record;

option go_package = "github.com/zhanghuachuan/water-reminder/api/proto";

message CreateRecordRequest {
    uint32 user_id = 1;
    float amount = 2;
    string drink_type = 3;
}

message CreateRecordResponse {
    uint32 record_id = 1;
    float amount = 2;
    string drink_type = 3;
    int64 timestamp = 4;
}

message GetRecordsRequest {
    uint32 user_id = 1;
}

message Record {
    uint32 id = 1;
    float amount = 2;
    string drink_type = 3;
    int64 timestamp = 4;
}

message GetRecordsResponse {
    repeated Record records = 1;
}

message GetTodayIntakeRequest {
    uint32 user_id = 1;
}

message GetTodayIntakeResponse {
    float total_amount = 1;
}

service WaterRecordService {
    rpc CreateRecord(CreateRecordRequest) returns (CreateRecordResponse);
    rpc GetRecords(GetRecordsRequest) returns (GetRecordsResponse);
    rpc GetTodayIntake(GetTodayIntakeRequest) returns (GetTodayIntakeResponse);
}